# reggie

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  reggie.h
src/: CMakeLists.txt  reggie.cpp  reggie.h
test/: CMakeLists.txt  testRunner.cpp
